log
Wed, Mar 19, 2025  9:36:26 AM: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
3f6cb15
Wed, Mar 19, 2025  3:13:16 PM: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:8: error: unused variable 'suma' [-Werror=unused-variable]
    int suma = 0;
        ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ff13586
Wed, Mar 19, 2025  3:13:32 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
6eed12b
Wed, Mar 19, 2025  3:14:34 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
8efe360
Fri, Mar 21, 2025  7:50:23 PM: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
12a1a5c
Fri, Mar 21, 2025  7:55:10 PM: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  2|3
total_score: 20/70
b62ef14
Fri, Mar 21, 2025  7:57:51 PM: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:87:22: error: implicit declaration of function 'previous' [-Werror=implicit-function-declaration]
          elementos = previous(L);
                      ^~~~~~~~
exercises.c:87:20: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
          elementos = previous(L);
                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
8ef733e
Fri, Mar 21, 2025  8:06:29 PM: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|3
total_score: 20/70
cb26da3
Fri, Mar 21, 2025  8:11:00 PM: 
 exercises.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  3|2
total_score: 40/70
2c26ac7
Fri, Mar 21, 2025  9:53:20 PM: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:102:26: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
    Stack* pilaAuxiliar = create_stack;
                          ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9bd5ef4
Fri, Mar 21, 2025  9:53:39 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
b259609
Fri, Mar 21, 2025 10:07:21 PM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
8c2498a
Fri, Mar 21, 2025 10:07:43 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
563e95a
Fri, Mar 21, 2025 10:23:20 PM: 
 exercises.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
8150b36
Fri, Mar 21, 2025 10:23:44 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
f4685a6
Fri, Mar 21, 2025 10:24:28 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 60/70
63a7c10
Fri, Mar 21, 2025 10:25:38 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
8d4adb6
Fri, Mar 21, 2025 10:27:43 PM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:149:16: error: format '%c' expects argument of type 'int', but argument 2 has type 'void *' [-Werror=format=]
       printf("%c  %c",top(PilaC2),top(PilaC1) );
                ^
exercises.c:149:20: error: format '%c' expects argument of type 'int', but argument 3 has type 'void *' [-Werror=format=]
       printf("%c  %c",top(PilaC2),top(PilaC1) );
                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
7f28024
Fri, Mar 21, 2025 10:32:05 PM: 
 exercises.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:132:26: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(pilaAuxiliar, caracter);
                          ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:133:20: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(PilaC1, caracter);
                    ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9c34c69
Fri, Mar 21, 2025 10:34:12 PM: 
 exercises.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:133:26: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(pilaAuxiliar, *ptrChar);
                          ^
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:134:20: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(PilaC1, *ptrChar);
                    ^
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
79d66cf
Fri, Mar 21, 2025 10:34:35 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|1
total_score: 50/70
3fb0aca
Fri, Mar 21, 2025 10:47:52 PM: 
 exercises.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
25ec008
Fri, Mar 21, 2025 10:48:41 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|1
total_score: 50/70
8d42710
Fri, Mar 21, 2025 10:52:17 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
2048cbf
Fri, Mar 21, 2025 10:52:38 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
c9d321c
Fri, Mar 21, 2025 11:04:28 PM: 
 exercises.c | 38 ++++++++++++++++----------------------
 1 file changed, 16 insertions(+), 22 deletions(-)
 tests:  4|1
total_score: 50/70
abd18f6
Fri, Mar 21, 2025 11:04:54 PM: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|1
total_score: 50/70
9c35588
Fri, Mar 21, 2025 11:05:17 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
58f619e
